--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -9,5 +9,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <app-grocery>Loading...</app-grocery>
 </body>
-</html>
+</html> 
